# MemeGarden

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configs/: default.toml
configs/presets/: cooperation-vs-selfish-high.toml  cooperation-vs-selfish-low.toml  cooperation-vs-selfish-mid.toml
crates/meme-garden-cli/: Cargo.toml
crates/meme-garden-cli/src/: app.rs  export.rs  main.rs  runner.rs  tui.rs
crates/meme-garden-cli/tests/: export_roundtrip.rs  headless.rs  sweep.rs
crates/meme-garden-core/: Cargo.toml
crates/meme-garden-core/src/: action.rs  agent.rs  ai.rs  config.rs  lib.rs  lineage.rs  meme.rs  metrics.rs  mutation.rs  policy.rs  rng.rs  starters.rs  world.rs
crates/meme-garden-core/tests/: cognitive_cost.rs  config_validation.rs  conflict.rs  determinism.rs  extinction.rs  lineage.rs  milestone.rs  mutation.rs  transmission.rs  tui_headless_equivalence.rs
docs/: design.md  meme-grammar.md
specs/001-meme-garden-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-meme-garden-mvp/checklists/: requirements.md
specs/001-meme-garden-mvp/contracts/: ai-seams.md  cli.md  config.schema.md  metrics.schema.md
