[workspace]
resolver = "2"
members = [
    "crates/meme-garden-core",
    "crates/meme-garden-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Meme Garden contributors"]
repository = "https://github.com/lucasantinocevasco/MemeGarden"
rust-version = "1.75"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
rand_pcg = "0.3"
thiserror = "1"
tracing = "0.1"
smallvec = { version = "1", features = ["serde", "union"] }

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
meme-garden-core = { path = "crates/meme-garden-core" }

[profile.release]
lto = "thin"
codegen-units = 1
